--- a/frontend/src/components/MovieFilter.css
+++ b/frontend/src/components/MovieFilter.css
@@ -6,6 +6,8 @@
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     border: 1px solid #414868;
+    width: 20rem;
+    box-sizing: border-box;
 }
 
 .movie-select-dropdown {
